--- a/env/helm-guestbook-dev/templates/ut.yaml
+++ b/env/helm-guestbook-dev/templates/ut.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   generateName: app-slack-notification-
+  namespace: hlem-guestbook
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
