--- a/promotion-app/promotion-strategy.yaml
+++ b/promotion-app/promotion-strategy.yaml
@@ -10,6 +10,8 @@ spec:
   environments:
   - branch: environments/development
     autoMerge: true
+    activeCommitStatuses:
+    - key: unittest
   - branch: environments/staging
   - branch: environments/production
     proposedCommitStatuses:
